import "goby/protobuf/dccl_option_extensions.proto";
import "goby/protobuf/queue_option_extensions.proto";


message TestMsg
{
  option (dccl.id) = 2;
  option (dccl.max_bytes) = 32;

  // test default enc/dec
  optional double double_default_optional = 1 [(dccl.min)=-100,
                                      (dccl.max)=126,
                                      (dccl.precision)=2,
                                      (dccl.in_head)=true];
  optional float float_default_optional = 2 [(dccl.min)=-20,
                                      (dccl.max)=150,
                                      (dccl.precision)=3];
}

